Fix about page alignment

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -1993,7 +1993,7 @@ h2.section-title.hp-style {
 .aboutus-list .box:nth-child(4) {
 	width: 38%;
 	margin-left: 10%;
-    top: -230px;
+    top: -180px;
 }
 .aboutus-list .box.blue:nth-child(3) {
 	width: 38%;
