--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -1996,7 +1996,7 @@ h2.section-title.hp-style {
 .aboutus-list .box:nth-child(4) {
 	width: 38%;
 	margin-right: 10%;
-    top: -230px;
+    top: -180px;
 }
 .aboutus-list .box.blue:nth-child(3) {
 	width: 38%;
